--- a/style.css
+++ b/style.css
@@ -1,57 +1,56 @@
-nargin: 8
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-box-sizing: border-box;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: whitesmoke;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
-body
+.gif {
+    height: 100%;
+    width: 100%;
+}
 
-display: flex;
-
-justify-content: center;
-
-411gn-Lters: center; an-belutit: 108vh;
-
-background: whitesmoke; font-family: Verdana, Gemeva, Tabona, sans-serif;
-
-aif (
-
-height: 100%; width: 100%;
-
-taxt-align:center
-
-font-size: 1.Sen color: #e94es;
-
-nargin: 15px 1
-
-th: 100%
-
-height: 30px; display: flest
-
-justify contents center;
-
-nargin-top: 5px
-
-button
-
-position: absolute;
-
-wtath: 150px; height: Soherit;
-
-color: white; fant-size: 1.2em;
-
-border-radius: 301
-
-outline: none;
-
-hoa-shadow: 0 1px 4px gray;
-
-carsor: pointer;
-
-border: 2px solid #945; fant stam: Leng
-
-Mattoninth-child) (
-
-margin-left: -200 background: #e5458
-
-buttominth-child(2) ( margin-right: 200px)
-
-background wittes color: #e94d
+h2 {
+    text-align: center;
+    font-size: 1.5em;
+    color: #e94d58;
+    margin: 15px 0;
+}
+.btn-group {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+button {
+    position: absolute;
+    width: 150px;
+    height: inherit;
+    color: white;
+    font-size: 1.2em;
+    border-radius: 30px;
+    outline: none;
+    cursor: pointer;
+    box-shadow: 0 2px 4px gray;
+    border: 2px solid #e94d58;
+    font-size: 1.2em;
+}
+button:nth-child(1) {
+    margin-left: -200px;
+    background: #e94d58;
+}
+button:nth-child(2) {
+    margin-right: -200px;
+    background: white;
+    color: #e94d58;
+}
